<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/m_gps"
        android:enabled="false"
        android:icon="@drawable/gps_satelite"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/m_str_gpsOn"
        android:visible="false"/>

    <item
        android:id="@+id/m_correccion"
        android:icon="@drawable/ic_action_correccion"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/m_str_correccion" />

    <item
        android:id="@+id/m_orden"
        android:icon="@drawable/ic_action_descendente"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/m_str_desendente"/>

    <item
        android:id="@+id/m_noRegistrados"
        android:icon="@drawable/ic_action_nuevo"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/m_str_noregistrados"/>
    <item
        android:id="@+id/m_font_informacion"
        android:title="@string/str_ajustar_fuente_informacion"
        android:visible="false"/>

    <item
        android:id="@+id/m_font_areaCaptura"
        android:title="@string/str_ajustar_fuente_areaCaptura"
        android:visible="false"/>

    <item
        android:id="@+id/m_cambiarFuente"
        android:title="@string/m_strCambiarFuente"
        android:visible="false"/>

    <item
        android:id="@+id/m_Impresion"
        android:icon="@drawable/ic_deshabilita_impr"
        android:showAsAction="never"
        android:title="@string/m_str_habilita_Impresion"/>

    <item
        android:id="@+id/m_cambio_medidor"
        android:icon="@drawable/ic_cambio_medidor"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="Cambio de Medidor"
        android:visible="false"/>

    <item
        android:id="@+id/m_SolicitarAyuda"
        android:icon="@drawable/ic_cambio_medidor"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/str_lbl_emergencia"/>

    <item
        android:id="@+id/m_EntrarSupervisor"
        android:icon="@drawable/ic_cambio_medidor"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/str_lbl_supervisor"/>

</menu>