<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SupervisorLoginActivity">

    <TextView
        android:id="@+id/lblTituloSupervisor"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="@color/SteelBlue"
        android:gravity="center"
        android:text="@string/str_lbl_supervisor"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblMensajeSupervisor"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="@color/LightSteelBlue"
        android:gravity="center"
        android:text="@string/str_lbl_mensaje_supervisor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#546E7A"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:labelFor="@id/txtUsuario"
        android:text="@string/str_lbl_usuario_supervisor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/str_lbl_usuario_supervisor" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_contrasena"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:minHeight="48dp"
        android:text="@string/str_contrasena" />

    <TextView
        android:id="@+id/lblCodigoSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_lbl_codigo_sms"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtCodigoSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/str_lbl_codigo_sms" />

    <TextView
        android:id="@+id/lblMensajeSupervisor2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/Moccasin"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_lbl_mensaje_supervisor2"
        android:textColor="#5E35B1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="0.75"
        android:orientation="vertical">

        <GridView
            android:id="@+id/gv_resumen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="10dp"
            android:numColumns="1"
            android:verticalSpacing="10dp"
            android:visibility="visible"></GridView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAutenticar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/str_lbl_autenticar" />

        <Button
            android:id="@+id/btnValidarSMS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/str_lbl_validar_sms" />

        <Button
            android:id="@+id/btnEnviarInforme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/str_lbl_enviar_informe" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/cancelar" />
    </LinearLayout>
</LinearLayout>